--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-html {
-  height: 100%;
-  width: 100%;
-}
+<style>
+body {font-family: "Raleway", Arial, sans-serif}
+.w3-row img {margin-bottom: -8px}
+</style>
