--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 <style>
 body, html {
   height: 100%;
-  font-family: "Inconsolata", sans-serif;
+  font-family: "Inconsolata", sans-serif; 
+  background-color: #F4A460;
 }
 
 .bgimg {
