--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ body, html {
   height: 100%;
   font-family: "Inconsolata", sans-serif; 
   background-color: #F4A460;
+  body {
+  background-color: rgb(240, 240, 240); /* Light gray */
+}
 }
 .my-container {
   background-color: #ffcc00; 
